# Webot

./: .gitignore  README.md  loop.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: pythonpackage.yml  start.sh
examples/: ai_chat_with_self.py
media/: sunburst_city.html  webot_login.mindnode
webot/: __main__.py  common.py  conf.py  core.py  data.py  exporter.py  log.py  parser.py  util.py
